<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="392dp"
        android:layout_height="114dp"
        android:layout_marginTop="188dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fudge_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fudge_amount_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <SeekBar
        android:id="@+id/amount_fudge"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:max="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fudge_label" />

    <LinearLayout
        android:id="@+id/checkboxLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fudge_progress_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/peanuts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peanuts" />

            <CheckBox
                android:id="@+id/m_and_ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_and_ms" />

            <CheckBox
                android:id="@+id/almonds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/almonds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/brownie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie" />

            <CheckBox
                android:id="@+id/strawberries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strawberries" />

            <CheckBox
                android:id="@+id/oreos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oreos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/gummy_bears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gummy_bears" />

            <CheckBox
                android:id="@+id/marshmallows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marshmallows" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/flavor"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:entries="@array/flavor_names"
        app:layout_constraintEnd_toStartOf="@+id/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_label_text" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/price_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        android:text="@string/price_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Spinner
        android:id="@+id/size"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/size_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flavor"
        app:layout_constraintTop_toBottomOf="@+id/price_label_text" />

    <TextView
        android:id="@+id/fudge_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/progress_0oz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_fudge" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/the_works"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/button_the_works" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_order" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
